--- a/gb/21/12/27/n13462720.md
+++ b/gb/21/12/27/n13462720.md
@@ -1,16 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gdruvp3666/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gdruvp3666/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gdruvp3666/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gdruvp3666/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gdruvp3666/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gdruvp3666/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】中共对圣诞节的打压</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13462722-christmas-china-religion-1200x798-600x400.jpg" />
 <h6>2020年12月24日，在北京圣若瑟教堂（St. Joseph's Church）做平安夜弥撒期间，一名戴着口罩的保安在门外站岗。 (Noel Cells/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年12月27日讯】（大纪元专栏作家Anders Corr撰文／曲志卓编译）中国共产党（CCP）是一个集权的政党，因为它需要其公民的绝对服从。中国公民的任何团体、组织或哲学，都必须符合中共的统治。这包括所有宗教，包括基督教及其<ahref="https://github.com/gdruvp3666/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E8%8A%82.md#1">圣诞节</a>庆祝活动。</p>
+	<p>【大纪元2021年12月27日讯】（大纪元专栏作家Anders Corr撰文／曲志卓编译）中国共产党（CCP）是一个集权的政党，因为它需要其公民的绝对服从。中国公民的任何团体、组织或哲学，都必须符合中共的统治。这包括所有宗教，包括基督教及其<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E8%8A%82.md#1">圣诞节</a>庆祝活动。</p>
+<p><strong>听文章：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/3b03b0d1-0577-4695-a99c-bf1c789c25ce" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>中共总书记习近平本月在一次宗教事务会议上呼吁“宗教中国化”。实际上，这意味着包括基督徒在内的宗教领袖必须服从中共官员。</p>
 <p>习近平在该全国会议上说，“必须坚持和发展中国特色社会主义宗教理论，必须坚持党的宗教工作基本方针，必须坚持我国宗教中国化方向”。</p>
 <p>这让圣诞老人没有了立足之地。</p>
-<p>据《独立报》（The Independent）报导，“一些中共官员试图转移中国人对<ahref="https://github.com/gdruvp3666/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E8%8A%82.md#1">圣诞节</a>的关注，转而鼓励人们庆祝毛泽东的生日。毛泽东是前领导人和近代中国（中共）的缔造者，出生于1893年12月26日，死于82岁。”</p>
+<p>据《独立报》（The Independent）报导，“一些中共官员试图转移中国人对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E8%8A%82.md#1">圣诞节</a>的关注，转而鼓励人们庆祝毛泽东的生日。毛泽东是前领导人和近代中国（中共）的缔造者，出生于1893年12月26日，死于82岁。”</p>
 <p>2019年，山东省临沂市的官员在圣诞节那天，在一座寺庙里的毛泽东雕像脚下为其献上一个生日蛋糕。</p>
 <p>很难想像临沂的“圣毛”会对数百万想要庆祝真正圣诞节的人产生什么影响。但是，对于共产主义信徒来说，这是个响亮而明确的信号：庆祝毛泽东的生日而不是圣诞老人。</p>
 <p>虽然与那些遭受联合国所定义的群体灭绝的维吾尔人、法轮功和藏人相比，基督徒所经历的打压不是十分严重，但那些向基督寻求慰籍的人在中国受到越来越多的迫害。基督教教堂被拆除，基督教领袖被迫听命于北京。自2018年以来，地方当局甚至不阻止庆祝圣诞节。</p>
@@ -44,47 +47,47 @@
 <p><em>安德斯?科尔（Anders Corr）拥有耶鲁大学政治学学士学位（2001年）和哈佛大学（2008年）政府学博士学位。他是《政治风险杂志》（Journal of Political Risk）出版商，科尔分析公司委托人。他在北美、欧洲和亚洲进行过广泛的研究。他撰写了《权力的集中》（The Concentration of Power）和《不侵犯》（No Trespassing），并编辑了《大国，大战略》一书（Great Powers, Grand Strategies）。</em></p>
 <p><em>原文“<ahref="https://www.theepochtimes.com/the-crackdown-on-christmas-in-china_4177220.md#1">The Crackdown on Christmas in China</a>”刊于英文《大纪元时报》</em></p>
 <p><em>本文仅代表作者本人的观点，不一定反映《大纪元时报》的立场。</em></p>
-<p>责任编辑：高静#</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/12/n13432541.md#1">【名家专栏】“中共特色”的人权谎言</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/22/n13453241.md#1">【名家专栏】圣诞心愿：权利与自由</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/23/n13455444.md#1">【名家专栏】五部经典圣诞电影</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/23/n13455446.md#1">【名家专栏】通胀下美国工薪家庭怎样过圣诞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/12/n13432541.md#1">【名家专栏】“中共特色”的人权谎言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/22/n13453241.md#1">【名家专栏】圣诞心愿：权利与自由</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/23/n13455444.md#1">【名家专栏】五部经典圣诞电影</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/23/n13455446.md#1">【名家专栏】通胀下美国工薪家庭怎样过圣诞</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267496.md#1" target="_blank">少年心声：你若心里难受 就请看《转法轮》</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281981.md#1" target="_blank">共产暴政录：苏俄及中共分裂外蒙古</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/13/n13435096.md#1">万事皆有定数 民间神算者为世人指点迷津</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/23/n13456034.md#1">【未解之谜】神奇彝历与玛雅人</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/18/n13445156.md#1">冬至常新：天人合一文明与传世科技成就</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/24/n13458471.md#1">【军事热点】MQ-25无人空中加油机登上航母</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/10/n13430183.md#1">【思想领袖】耶利米：社会主义才是致命病毒</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/25/n13459595.md#1">【舞蹈三剑客】圣诞特辑：芬兰小精灵舞大挑战</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/24/n13458587.md#1">王友群：二十大前中共权斗已经公开化</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/25/n13459853.md#1">“宁德时代”罕见暴跌 市值21天蒸发三千亿</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/25/n13459229.md#1">新疆广东高层变动 新疆书记陈全国被换</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/24/n13458335.md#1">梁朝伟平安夜晒圣诞树 刘嘉玲上海豪宅曝光</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/24/n13458541.md#1">范冰冰晒游泳照 歪头自拍显俏皮</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/26/n13460291.md#1">儿子碰大麻遭逮 吴宗宪痛心回应“从重量刑”</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/26/n13460372.md#1">詹雅雯圣诞夜抱病开唱 特邀医护慰劳防疫辛劳</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/25/n13459931.md#1">“当初入行是为养家” 35岁马天宇自曝将退圈</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/26/n13460260.md#1">谷歌地图用户发现 美军B-2轰炸机飞过农田</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/22/n13453626.md#1">三大最营养食材 第一名是1种坚果</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/24/n13457208.md#1">室内晾衣服快速晾干、没臭味！只要简单7招</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/26/n13460154.md#1">60年没碰钢琴 安倍晋三呈现圣诞惊喜</a></li>
-<li><a href="https://github.com/gdruvp3666/djy/blob/master/gb/21/12/22/n13453663.md#1">头部有回春穴位！按7穴位 和法令纹说拜拜</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gdruvp3666/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gdruvp3666/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/27/n13462720.htm">【名家专栏】中共对圣诞节的打压</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/27/n13462720.htm">【名家专栏】中共对圣诞节的打压</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gdruvp3666/djy/blob/master/gb/21/12/27/n13462720.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gdruvp3666/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gdruvp3666/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gdruvp3666/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gdruvp3666/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gdruvp3666/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/12/27/n13462720.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
